--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -23,6 +23,8 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mlc-ai/web-llm": "^0.2.79",
+    "ajv": "^8.17.1",
     "bootstrap": "^5.2.3",
     "ng-angular-popup": "^0.2.0",
     "rxjs": "~7.8.0",
